<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/connect_user_Heading1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/connect_user_Heading1"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/connect_user_Heading2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/connect_user_Heading1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/connect_user_Heading2"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/connect_user_Heading3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/connect_user_Heading2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/connect_user_Heading3"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/connect_user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/connect_user_Heading3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/connect_user_email"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <ToggleButton
        android:id="@+id/connect_user_switch_carer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/connect_user_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textOff="@string/connect_user_switch_patient"
        android:textOn="@string/connect_user_switch_carer" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_user_button_connect"
        android:id="@+id/connect_user_button_connect"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textStyle="bold" />


</RelativeLayout>
