<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/statusScr1Heading1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp"
        android:text="@string/statusScr1Heading1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/statusScr1Heading2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/statusScr1Heading1"
        android:gravity="center_horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp"
        android:text="@string/statusScr1Heading2"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/statusScr1Instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/statusScr1Heading2"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp"
        android:text="@string/statusScr1Instructions" />

    <TextView
        android:id="@+id/statusScr1StatusItem1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/statusScr1Instructions"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:checked="true"
        android:paddingLeft="15dp"
        android:text="@string/statusScr1StatusItem1" />

    <TextView
        android:id="@+id/statusScr1StatusItem1_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/statusScr1StatusItem1"
        android:layout_centerVertical="true"
        android:layout_marginRight="30dp"
        android:text="@string/statusScr1StatusItem1_value" />

    <TextView
        android:id="@+id/statusScr1StatusItem2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/statusScr1StatusItem1"
        android:layout_centerVertical="true"
        android:layout_marginTop="15dp"
        android:paddingLeft="15dp"
        android:text="@string/statusScr1StatusItem2" />

    <TextView
        android:id="@+id/statusScr1StatusItem2_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/statusScr1StatusItem2"
        android:layout_centerVertical="true"
        android:layout_marginRight="30dp"
        android:text="@string/statusScr1StatusItem2_value" />

    <TextView
        android:id="@+id/statusScr1StatusItem3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/statusScr1StatusItem1"
        android:layout_below="@+id/statusScr1StatusItem2"
        android:layout_centerVertical="true"
        android:layout_marginTop="15dp"
        android:paddingLeft="15dp"
        android:text="@string/statusScr1StatusItem3" />

    <TextView
        android:id="@+id/statusScr1StatusItem3_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/statusScr1StatusItem3"
        android:layout_centerVertical="true"
        android:layout_marginRight="30dp"
        android:text="@string/statusScr1StatusItem3_value" />

    <TextView
        android:id="@+id/statusScr1StatusItem4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/statusScr1StatusItem3"
        android:layout_centerVertical="true"
        android:layout_marginTop="15dp"
        android:checked="true"
        android:paddingLeft="15dp"
        android:text="@string/statusScr1StatusItem4" />

    <TextView
        android:id="@+id/statusScr1StatusItem4_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/statusScr1StatusItem4"
        android:layout_centerVertical="true"
        android:layout_marginRight="30dp"
        android:text="@string/statusScr1StatusItem4_value" />

    <ExpandableListView
        android:id="@+id/statusScr1Status_clientList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/statusScr1StatusItem4"
        android:layout_marginTop="14dp"/>

</RelativeLayout>
