<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/connect_req_Heading1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/connect_req_Heading1"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/connect_req_Heading2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/connect_req_Heading1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:gravity="center_horizontal"
        android:text="@string/connect_req_Heading2"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:id="@+id/connect_req_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/connect_req_Heading2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/connect_req_connection"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/connect_req_Heading3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/connect_req_connection"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/connect_req_Heading3"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <Button
        android:id="@+id/connect_req_BtnOkay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/connect_req_Heading3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:width="180dp"
        android:height="80dp"
        android:minWidth="80dp"
        android:text="@string/connect_req_BtnOkay"
        android:textColor="@color/connect_req_btn_textColour_okay"/>

    <Button
        android:id="@+id/connect_req_BtnNotOkay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/connect_req_BtnOkay"
        android:layout_below="@+id/connect_req_BtnOkay"
        android:layout_marginTop="14dp"
        android:width="180dp"
        android:height="80dp"
        android:minWidth="80dp"
        android:text="@string/connect_req_BtnNotOkay"
        android:textColor="@color/connect_req_btn_textColour_okay"/>

</RelativeLayout>
