<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/welcomeScr1Heading1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp"
        android:text="@string/welcomeScr1Heading1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/welcomeScr1Heading2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/welcomeScr1Heading1"
        android:gravity="center_horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp"
        android:text="@string/welcomeScr1Heading2"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/welcomeScr1Instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/welcomeScr1Heading2"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp"
        android:text="@string/welcomeScr1Instructions" />

    <LinearLayout
        android:id="@+id/welcomeScr1PersonNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/welcomeScr1Instructions">

        <EditText
            android:id="@+id/welcomeScr1PersonNameFirst"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".40"
            android:ems="10"
            android:hint="@string/welcomeScr1PersonNameFirst"
            android:inputType="textPersonName">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/welcomeScr1PersonNameLast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".60"
            android:ems="10"
            android:hint="@string/welcomeScr1PersonNameLast"
            android:inputType="textPersonName"></EditText>
    </LinearLayout>

    <EditText
        android:id="@+id/welcomeScr1MobilePhoneNbr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/welcomeScr1PersonNameLayout"
        android:ems="10"
        android:hint="@string/welcomeScr1MobilePhoneNbr"
        android:inputType="phone" />

    <EditText
        android:id="@+id/welcomeScr1HomePhoneNbr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/welcomeScr1MobilePhoneNbr"
        android:ems="10"
        android:hint="@string/welcomeScr1HomePhoneNbr"
        android:inputType="phone" />

    <EditText
        android:id="@+id/welcomeScr1EmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/welcomeScr1HomePhoneNbr"
        android:ems="10"
        android:hint="@string/welcomeScr1EmailAddr"
        android:inputType="textEmailAddress" />

    <ProgressBar
        android:id="@+id/welcomeScr1Progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/welcomeScr1BtnSubscribe"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/welcomeScr1EmailAddress"
        android:layout_centerHorizontal="true"
        android:layout_weight="2"
        android:gravity="center_horizontal"
        android:indeterminateOnly="true"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/welcomeScr1ErrorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/welcomeScr1ErrorMessageDetail"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp"
        android:textColor="@color/text_error"
        android:textSize="30sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/welcomeScr1ErrorMessageDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/welcomeScr1BtnSubscribe"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp"
        android:textColor="@color/text_error"
        android:textSize="26sp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/welcomeScr1BtnSubscribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/welcomeScr1BtnSubscribe" />

</RelativeLayout>
