<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/alert_carer_Heading1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp"
        android:text="@string/alert_carer_Heading1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/alert_carer_Heading2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/alert_carer_Heading1"
        android:gravity="center_horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp"
        android:text="@string/alert_carer_Heading2"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/alert_carer_OkayQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/alert_carer_Heading2"
        android:gravity="center_horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp"
        android:text="@string/alert_carer_OkayQuestion"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="32sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/alert_carer_response"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/alert_carer_OkayQuestion"
        android:ems="10"
        android:gravity="center_horizontal"
        android:minLines="3" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/alert_carer_BtnRespond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/alert_carer_response"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:layout_marginTop="14dp"
        android:height="80dp"
        android:minWidth="80dp"
        android:text="@string/alert_carer_BtnOkay"
        android:textColor="@color/alert_carer_btn_textColour_okay"
        android:width="180dp" />

    <Button
        android:id="@+id/alert_carer_BtnNotRespond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/alert_carer_BtnRespond"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:height="80dp"
        android:text="@string/alert_carer_BtnNotOkay"
        android:textColor="@color/alert_carer_btn_textColour_notokay"
        android:width="180dp" />

</RelativeLayout>
